// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Simulate actions Click edit button 1`] = `
<Draggable
  allowAnyClick={false}
  axis="both"
  bounds={false}
  cancel={null}
  defaultClassName="react-draggable"
  defaultClassNameDragged="react-draggable-dragged"
  defaultClassNameDragging="react-draggable-dragging"
  defaultPosition={
    Object {
      "x": 0,
      "y": 0,
    }
  }
  disabled={true}
  enableUserSelectHack={true}
  grid={null}
  handle={null}
  offsetParent={null}
  onDrag={[Function]}
  onMouseDown={[Function]}
  onStart={[Function]}
  onStop={[Function]}
  position={null}
  transform={null}
>
  <div>
    <div
      className="note"
      style={
        Object {
          "right": 0,
          "top": 0,
          "transform": "rotate( 0 )",
        }
      }
    >
      <form
        onSubmit={[Function]}
      >
        <textarea
          defaultValue="Test"
          maxLength={40}
          rows={4}
        />
        <button
          aria-label="save"
          className="save"
        >
          <FaFloppyO />
        </button>
      </form>
    </div>
  </div>
</Draggable>
`;

exports[`Snapshots Note snapshot test 1`] = `
<Draggable
  allowAnyClick={false}
  axis="both"
  bounds={false}
  cancel={null}
  defaultClassName="react-draggable"
  defaultClassNameDragged="react-draggable-dragged"
  defaultClassNameDragging="react-draggable-dragging"
  defaultPosition={
    Object {
      "x": 0,
      "y": 0,
    }
  }
  disabled={false}
  enableUserSelectHack={true}
  grid={null}
  handle={null}
  offsetParent={null}
  onDrag={[Function]}
  onMouseDown={[Function]}
  onStart={[Function]}
  onStop={[Function]}
  position={null}
  transform={null}
>
  <div>
    <div
      className="note"
      style={
        Object {
          "right": 0,
          "top": 0,
          "transform": "rotate( 0 )",
        }
      }
    >
      <p>
        Test
      </p>
      <span>
        <button
          aria-label="edit"
          className="edit"
          onClick={[Function]}
        >
          <FaPencil />
        </button>
        <button
          aria-label="remove"
          className="remove"
          onClick={[Function]}
        >
          <FaTrash />
        </button>
      </span>
    </div>
  </div>
</Draggable>
`;
